test/testdata/list/times_string_non_int_error.lox
print ["hello"] * 2.5; // error: cannot multiply 'list' by non-integer 'number'
